--- a/bitrix/templates/exam1/template_styles.css
+++ b/bitrix/templates/exam1/template_styles.css
@@ -1,3 +1,10 @@
 .nav .menu .color-red {
     color: #ff0000;
 }
+
+.side-block .red {
+ background: linear-gradient(#fda3a3, #ff0000);
+}
+.side-block .green {
+ background: linear-gradient(#e2ffe7, #00ff43);
+}
